- Service Editor available as In-App Purchase
- Allow to add/remove bookmarks
- Fix possible crash in Package Manager on the iPad
- Fix "prefer alternatives" setting in autotimer
- Fix Play/Pause button on advanced remote with Enigma2 3.2+

1.2.0-full:
- Continue to load EPG data for MultiEPG in Background

1.3.0:
- Add support for different themes (four schemes to begin with)
- Add Multi-Delete to Timer and Movie List
- Confirmation when adding a timer / sending a message etc succeeded
- Long press gesture in event list added (add timer)
- Support multiple harddrives in "About Receiver"
Enigma2:
- Support for the upcoming web interface 1.7.0
- Support for more recent AutoTimer features
- Allow to change timer tags
- Allow to filter movies by tags
- Allow to move movies between locations (requires web interface 1.7.0)
- Improve performance when filling tables

1.3.0-full:
Enigma2:
- Allow to edit AutoTimer settings (needs recent experimental plugin)

1.4.0:
- Fix some possible crashes
- Fix crash with mail composer if opened from help screen in the settings
- Fix filling EPGCache passively
- No longer reset 'More' on the iPad in low memory conditions
- Completely remove TouchXML
- Improved error recovery (and display) for XML parsers
Enigma:
- Rewritten XML parsers for increased performance

1.4.1:
- Allow to select default action for zapping (if a stream player is installed)
- Fix starting a stream from movie details
- Smaller stability fixes

1.4.2:
- Fix some problems with iOS 4.3.x on the iPad
- New application Icon and splash screen by mfgeg, thanks!
- Most images are available in retina-optimized resolution now
- Bring back accessibility support (removed it by accident in 1.3.0)
Enigma2:
- Fix featureset for web interface versions between 1.5b4 and 1.6.5

1.4.3:
Enigma2:
- Allow to enable VPS if recent version of plugin is installed

1.4.3-full:
Enigma2:
- Allow to add AutoTimer from Timer-dialog (hold timer for 1s)